// 删除无用的代码

--- a/www/static/template/shop_onserver/about.html
+++ b/www/static/template/shop_onserver/about.html
@@ -50,7 +50,7 @@
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <div class="logo">
                     <a href="index.html">
-                        <img src="images/resources/logo.png" alt="Awesome Logo">
+                        <img src="images/resources/default.jpg" data-src= "images/resources/logo.png" alt="Awesome Logo">
                     </a>
                 </div>
             </div>
@@ -149,7 +149,7 @@
                     <div class="bottom-text">
                         <p>公司主要供应，大棚支架机，温室大棚，蔬菜大棚，花卉大棚，养殖大棚，钢管镀塑大棚产品、镀锌钢管大棚，几字钢大棚产品，已达到同行业良好水平，广泛运用于春秋蔬菜大棚、反季节温室蔬菜大棚、智能化温室大棚、阳光板真空玻璃大棚、花卉大棚、食用菌种植大棚、各种育苗大棚、各种牲畜养殖大棚、生态观光餐厅等，公司常年承接各种大棚工程，公司服务满足不同客户的需求，不断为客户提供满意的高科技产品，公司以诚信为原则，以创新为动力，以发展为目标，精诚协作，以我们不懈的努力，追求你的满意，并以您的满意作为我们的追求。</p>
                         <div class="certified-logo">
-                            <img src="images/resources/certified-logo.png" alt="Certified Logo">
+                            <img src="images/resources/default.jpg" data-src= "images/resources/certified-logo.png" alt="Certified Logo">
                         </div>
                     </div>
 
@@ -157,11 +157,11 @@
             </div>
             <div class="col-md-6 col-sm-6 col-xs-12">
                 <div class="video-gallery">
-                    <img src="images/resources/video-gallery.jpg" alt="Awesome Video Gallery">
+                    <img src="images/resources/default.jpg" data-src= "images/resources/video-gallery.jpg" alt="Awesome Video Gallery">
                     <div class="overlay-gallery">
                         <div class="icon-holder">
                             <div class="icon">
-                                <a class="" title="" href=""><img src="images/icon/play-btn.png" alt="Play Button"></a>
+                                <a class="" title="" href=""><img src="images/resources/default.jpg" data-src= "images/icon/play-btn.png" alt="Play Button"></a>
                             </div>
                         </div>
                     </div>
