--- a/www/static/template/shop_onserver/blog.html
+++ b/www/static/template/shop_onserver/blog.html
@@ -51,7 +51,7 @@
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <div class="logo">
                     <a href="index.html">
-                        <img src="images/resources/logo.png" alt="Awesome Logo">
+                        <img src="images/resources/default.jpg" data-src="images/resources/logo.png" alt="Awesome Logo">
                     </a>
                 </div>
             </div>
