--- a/www/static/template/shop_onserver/css/style.css
+++ b/www/static/template/shop_onserver/css/style.css
@@ -9,7 +9,7 @@
 @import url(owl.carousel.css);
 @import url(owl.theme.default.min.css);
 @import url(animate.min.css);
-@import url(jquery.bootstrap-touchspin.css);
+@import url(https://cdn.bootcss.com/bootstrap-touchspin/4.2.5/jquery.bootstrap-touchspin.min.css);
 @import url('jquery.fancybox.css');
 @import url('prettyPhoto.css');
 @import url('bootstrap-select.min.css');
@@ -21,13 +21,13 @@
 /*** Time picker css ***/
 @import url(../assets/timepicker/timePicker.css);
 @import url(../fonts/flaticon/flaticon.css);
-@import url(../assets/jquery-ui-1.11.4/jquery-ui.css);
+@import url(https://cdn.bootcss.com/jqueryui/1.11.4/jquery-ui.min.css);
 /*** Revolution slider ***/
 @import url(../assets/revolution/css/settings.css);
 @import url(../assets/revolution/css/layers.css);
 @import url(../assets/revolution/css/navigation.css);
 /*** Bootstrap select picker css ***/
-@import url(../assets/bootstrap-sl-1.12.1/bootstrap-select.css);
+@import url(https://cdn.bootcss.com/twitter-bootstrap/3.3.7/css/bootstrap.min.css);
 /*** Language Switcher ***/
 @import url(../assets/language-switcher/polyglot-language-switcher.css);
 
