--- a/www/static/template/shop_onserver/css/style.css
+++ b/www/static/template/shop_onserver/css/style.css
@@ -4,7 +4,7 @@
 @import url(imp.css);
 @import url(bootstrap.min.css);
 @import url(font-awesome.min.css);
-@import url(hover.css);
+@import url(https://cdn.bootcss.com/hover.css/2.0.2/css/hover-min.css);
 @import url(jquery.bxslider.css);
 @import url(owl.carousel.css);
 @import url(owl.theme.default.min.css);
