--- a/www/static/template/shop_onserver/services.html
+++ b/www/static/template/shop_onserver/services.html
@@ -155,7 +155,7 @@
                         <div class="overlay">
                             <div class="box">
                                 <div class="content">
-                                    <a href="#"><i class="fa fa-link" aria-hidden="true"></i></a>
+                                    <a href="shop.html" target="_blank"><i class="fa fa-link" aria-hidden="true"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -177,7 +177,7 @@
                         <div class="overlay">
                             <div class="box">
                                 <div class="content">
-                                    <a href="#"><i class="fa fa-link" aria-hidden="true"></i></a>
+                                    <a href="shop.html" target="_blank"><i class="fa fa-link" aria-hidden="true"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -201,7 +201,7 @@
                         <div class="overlay">
                             <div class="box">
                                 <div class="content">
-                                    <a href="#"><i class="fa fa-link" aria-hidden="true"></i></a>
+                                    <a href="shop.html" target="_blank"><i class="fa fa-link" aria-hidden="true"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -225,7 +225,7 @@
                         <div class="overlay">
                             <div class="box">
                                 <div class="content">
-                                    <a href="#"><i class="fa fa-link" aria-hidden="true"></i></a>
+                                    <a href="shop.html" target="_blank"><i class="fa fa-link" aria-hidden="true"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -247,7 +247,7 @@
                         <div class="overlay">
                             <div class="box">
                                 <div class="content">
-                                    <a href="#"><i class="fa fa-link" aria-hidden="true"></i></a>
+                                    <a href="shop.html" target="_blank"><i class="fa fa-link" aria-hidden="true"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -269,7 +269,7 @@
                         <div class="overlay">
                             <div class="box">
                                 <div class="content">
-                                    <a href="#"><i class="fa fa-link" aria-hidden="true"></i></a>
+                                    <a href="shop.html" target="_blank"><i class="fa fa-link" aria-hidden="true"></i></a>
                                 </div>
                             </div>
                         </div>
