--- a/www/static/template/shop_onserver/css/style.css
+++ b/www/static/template/shop_onserver/css/style.css
@@ -1,6 +1,6 @@
 /* Imported styles */
-@import url('https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i');
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,600i,700,700i,800,800i');
+/*@import url('https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i');*/
+/*@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,600i,700,700i,800,800i');*/
 @import url(imp.css);
 @import url(bootstrap.min.css);
 @import url(font-awesome.min.css);
