--- a/www/static/template/shop_onserver/services.html
+++ b/www/static/template/shop_onserver/services.html
@@ -349,7 +349,7 @@
 
 
 <!-- revolution slider js -->
-<script src="assets/revolution/js/jquery.themepunch.tools.min.js"></script>
+<script src=" https://cdn.bootcss.com/jquery.touchswipe/1.6.9/jquery.touchSwipe.min.js"></script>
 <script src="assets/revolution/js/jquery.themepunch.revolution.min.js"></script>
 <script src="assets/revolution/js/extensions/revolution.extension.actions.min.js"></script>
 <script src="assets/revolution/js/extensions/revolution.extension.carousel.min.js"></script>
