--- a/www/static/template/shop_onserver/index.html
+++ b/www/static/template/shop_onserver/index.html
@@ -424,7 +424,7 @@
 <!--End about us area-->
 
 <!--Start fact counter area-->
-<section class="fact-counter-area" style="background-image:url(images/resources/fact-counter-bg.png);">
+<section class="fact-counter-area" style="background-image:url(images/slides/1.jpg);">
 </section>
 <!--End fact counter area-->
 <!--Start latest blog area-->
